<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SingUpActivity">

    <ImageView
        android:id="@+id/imageView_icon_sign_up"
        android:src="@drawable/messanger"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        tools:ignore="ContentDescription" />
    <EditText
        android:id="@+id/edit_text_name_sing_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/name_sing_up"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_text_email_sing_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/phone_number_or_email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />
    <ProgressBar
        android:id="@+id/progres_sign_up"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"/>
    <EditText
        android:id="@+id/edit_text_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/password_sign_up"
        android:inputType="textPassword"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/btn_sing_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="12dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/sing_up"
        android:textColor="@color/status_text_color"
        android:textSize="18sp"
        android:enabled="false"
        android:background="@drawable/btn_background"/>




</LinearLayout>